tests/type-error/classes/DuplicateInstanceMethods.vix
class Test a where
  f : a
  g : a

instance Test Int where
  f = 1
  g = 2
  f = 3
  g = 4
